--- a/html/_/index.html
+++ b/html/_/index.html
@@ -246,7 +246,6 @@ crossorigin=""/>
 </div>
 
 
-
 <div class="modal-body m-0 p-0 text-size-14px text-justify"> 
   <!-- définissions des onglets -->
 <div class="panel-heading m-0 p-0">
@@ -298,7 +297,7 @@ crossorigin=""/>
       <!--1ère colonne-->
     <div class="col-xs-12 col-sm-12 col-lg-5 panelcontent">
       <p>
-        <h2 class="item d-inline text-size-16px">
+        <h2 class="item d-inline">
           <span lang="fr"><b>Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b></span>
           <span lang="en"><b>Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</b></span>
         </h2>
@@ -307,7 +306,7 @@ crossorigin=""/>
         </h3>
       </p>
       <p>
-        <h2 class="item d-inline text-size-16px">
+        <h2 class="item d-inline">
           <span lang="fr"><b>Prix <sup class="fas fa-question-circle iconetab" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières premières peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </b></span>
           <span lang="en"><b>Price <sup class="fas fa-question-circle iconetab" title="€ : 0 to 15 €/kg ; €€ : 15 to 50 €/kg; €€€ : 50 to 200 €/kg; €€€€ : 200 to 1000 €/kg; €€€€€ : 1000 €/kg and more. 1 € ≈ 1,1 USD. Raw materials cost can evolve according to various factors of their own."></sup> : </b></span>
         </h2>
@@ -316,7 +315,7 @@ crossorigin=""/>
         </h3>
       </p>
       <p>
-        <h2 class="item d-inline text-size-16px">
+        <h2 class="item d-inline">
           <span lang="fr"><b>Aspect <sup class="fas fa-question-circle iconetab" title="Couleur et état physique de la matière première."></sup> :</b></span>
           <span lang="en"><b>Aspect <sup class="fas fa-question-circle iconetab" title="Color and physical state of the raw material."></sup> :</b></span>
         </h2>
@@ -325,7 +324,7 @@ crossorigin=""/>
         </h3>
       </p>
       <p>
-        <h2 class="item d-inline text-size-16px">
+        <h2 class="item d-inline">
           <span lang="fr"><b>Composants principaux <sup class="fas fa-question-circle iconetab" title="Molécules majoritairement présentes dans la matière première. Les pourcentages donnés sont ici présents à titre indicatif et ne peuvent être généralisés à l'ensemble des chémotypes et des millésimes de la matière première. "></sup> :</b></span>
           <span lang="en"><b>Major components <sup class="fas fa-question-circle iconetab" title="Majoritary components of the raw material. The given purcentages are for illustrative purposes and cannot be generalized to the whole chemotypes and vintages of the raw material. "></sup> :</b></span>
         </h2>
@@ -1004,16 +1003,20 @@ crossorigin=""/>
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
       <p>
-        <h3 class="item d-inline text-size-16px">
+        <h2 class="item d-inline text-size-16px">
           <span lang="fr"><b>Utilisation <sup class="fas fa-question-circle iconetab" title="Types de parfums et d'accords auxquels la matière première peux être associée."></sup> :</b></span>
           <span lang="en"><b>Uses in perfumery <sup class="fas fa-question-circle iconetab" title="Type of accords and perfumes the raw material can be associated with."></sup> :</b></span>
+        </h2>
+        <h3 class="textitem d-inline">
           <span id="modalbody-utilisation" class="textitem"></span>
         </h3>
       </p>
       <p>
-        <h3 class="item d-inline text-size-16px">
+        <h2 class="item d-inline text-size-16px">
           <span lang="fr"><b>Commentaires et anecdotes <sup class="fas fa-question-circle iconetab" title="Autres commentaires sur la matière première"></sup> :</b></span>
           <span lang="en"><b>Other comments <sup class="fas fa-question-circle iconetab" title="Additional remarks concerning the raw material."></sup> : </b></span>
+        </h2>
+        <h3 class="textitem d-inline">
           <span id="modalbody-remarques" class="textitem"></span>
         </h3>
       </p>
@@ -1021,9 +1024,6 @@ crossorigin=""/>
   </div> 
   </div>
 </div>
-
-
-
 </div> <!--fin panel-content-->
 </div> <!--fin panel-body-->
 </div>  <!--fin body-->
