--- a/html/_/index.html
+++ b/html/_/index.html
@@ -337,9 +337,9 @@ crossorigin=""/>
       <!--2ème colonne-->
     <div class="col-xs-12 col-sm-12 col-lg-7 panelcontent">
         <div class="row">
-          <div class="col-7">
+          <div class="col-xs-12 col-sm-12 col-lg-7">
             <p>
-              <h2 class="item d-inline text-size-16px">
+              <h2 class="item d-inline">
                 <span lang="fr"><b>N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
                 <span lang="en"><b>CAS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
               </h2>
@@ -347,7 +347,7 @@ crossorigin=""/>
                 <span id="modalbody-cas"></span>
               </h3>
               <br>
-              <h2 class="item d-inline text-size-16px">
+              <h2 class="item d-inline">
                 <span lang="fr"><b>N° EINECS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification de la matière première dans l'Inventaire Européen des Substances chimiques Commerciales Existantes."></sup> :</b></span>
                 <span lang="en"><b>EINECS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the European INventory of Existing Commercial chemical Substances."></sup> :</b></span>
               </h2>
@@ -355,7 +355,7 @@ crossorigin=""/>
                 <span id="modalbody-einecs" ></span>
               </h3>
               <br>
-              <h2 class="item d-inline text-size-16px">
+              <h2 class="item d-inline">
                 <span lang="fr"><b>N° FEMA <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première au sein de la base de données Flavor Extract Manufacturers Association"></sup> :</b></span>
                 <span lang="en"><b>FEMA number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the Flavor Extract Manufacturers Association."></sup> :</b></span>
               </h2>
@@ -363,7 +363,7 @@ crossorigin=""/>
                 <span id="modalbody-fema" ></span>
               </h3>
               <br>
-              <h2 class="item d-inline text-size-16px">
+              <h2 class="item d-inline">
                 <span lang="fr"><b>N° JECFA <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
                 <span lang="en"><b>JECFA number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
               </h2>
@@ -371,7 +371,7 @@ crossorigin=""/>
                 <span id="modalbody-jecfa" class="textitem"></span>
               </h3>
               <br>
-              <h2 class="item d-inline text-size-16px">
+              <h2 class="item d-inline">
                 <span lang="fr"><b>N° FLAVIS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première dans le EU FLAVouring Information System."></sup> :</b></span>
                 <span lang="en"><b>FLAVIS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the EU FLAVouring Information System."></sup> :</b></span>
               </h2>
@@ -384,7 +384,7 @@ crossorigin=""/>
         </div>
         <div class="row"> 
           <div class="col-12">
-          <h3 class="item d-inline text-size-16px">
+          <h3 class="item d-inline">
             <span lang="fr"><b>Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</b></span>
             <span lang="en"><b>Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</b></span>
             <span id="modalbody-stab" class="textitem"></span>
