--- a/html/_/index.html
+++ b/html/_/index.html
@@ -384,9 +384,11 @@ crossorigin=""/>
         </div>
         <div class="row"> 
           <div class="col-12">
-          <h3 class="item d-inline">
+          <h2 class="item d-inline">
             <span lang="fr"><b>Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</b></span>
             <span lang="en"><b>Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</b></span>
+          </h2>
+          <h3 class="textitem d-inline">
             <span id="modalbody-stab" class="textitem"></span>
           </h3>
         </div>
