--- a/html/_/index.html
+++ b/html/_/index.html
@@ -392,7 +392,7 @@ crossorigin=""/>
             <span id="modalbody-stab" class="textitem"></span>
           </h3>
         </div>
-      </div>
+    </div>
     </div>
     </div><!--Fin row-->
   </div><!--Fin container-->
@@ -404,65 +404,65 @@ crossorigin=""/>
   <div class="row">
   <div class="col-12 panelcontent">
     <div class="row">
-      <div class="col-9">
+      <div class="col-xs-12 col-sm-12 col-9">
         <p>
-          <h2 class="item  d-inline text-size-16px">
-            <span lang="fr"><b>Nom botanique <sup class="fas fa-question-circle iconetab" title="Nom de la plante ou de l'animal selon le Code International de Nomenclature Botanique."></sup> :</b></span>
-            <span lang="en"><b>Botanical name <sup class="fas fa-question-circle iconetab" title="Name of the plant or the animal, according to the International Code of Nomenclature for Plants."></sup> :</b></span>
+          <h2 class="item d-inline">
+            <span lang="fr">Nom botanique <sup class="fas fa-question-circle iconetab" title="Nom de la plante ou de l'animal selon le Code International de Nomenclature Botanique."></sup> :</span>
+            <span lang="en">Botanical name <sup class="fas fa-question-circle iconetab" title="Name of the plant or the animal, according to the International Code of Nomenclature for Plants."></sup> :</span>
           </h2>
           <h3 class="textitem d-inline" style="font-style: italic;">
             <span id="modalbody-nbota"></span>
           </h3>
         </p>
         <p>
-          <h2 class="item  d-inline text-size-16px">
-            <span lang="fr"><b>Botanique <sup class="fas fa-question-circle iconetab" title="Famille et/ou genre botanique à laquelle la matière première est ratachée."></sup> :</b></span>
-            <span lang="en"><b>Botanical filiation <sup class="fas fa-question-circle iconetab" title="Botanical family and genus to which the raw material is linked."></sup> :</b></span>
+          <h2 class="item d-inline">
+            <span lang="fr">Botanique <sup class="fas fa-question-circle iconetab" title="Famille et/ou genre botanique à laquelle la matière première est ratachée."></sup> :</span>
+            <span lang="en">Botanical filiation <sup class="fas fa-question-circle iconetab" title="Botanical family and genus to which the raw material is linked."></sup> :</span>
           </h2>
           <h3 class="textitem d-inline">
-            <span id="modalbody-bota"  class="textitem"></span>
+            <span id="modalbody-bota"></span>
           </h3>
         </p>
         <p>
-          <h2 class="item  d-inline text-size-16px">
-            <span lang="fr"><b>Origine(s) géographique(s) <sup class="fas fa-question-circle iconetab" title="Pays et régions de culture de la matière première."></sup> :</b></span>
-            <span lang="en"><b>Geographic origin <sup class="fas fa-question-circle iconetab" title="Country and region of cultivation of the raw material."></sup> :</b></span>
+          <h2 class="item d-inline">
+            <span lang="fr">Origine(s) géographique(s) <sup class="fas fa-question-circle iconetab" title="Pays et régions de culture de la matière première."></sup> :</span>
+            <span lang="en">Geographic origin <sup class="fas fa-question-circle iconetab" title="Country and region of cultivation of the raw material."></sup> :</span>
           </h2>
           <h3 class="textitem d-inline">
-            <span id="modalbody-origine" class="textitem"></span>
+            <span id="modalbody-origine"></span>
           </h3>
         </p> 
       </div>
       <!-- Colonne Image-->
-      <div id="modalbody-pictA" class="imgmp  col-xs-12 col-sm-12 col-md-12 lg-offset-1 col-lg-4  order-first order-sm-first order-lg-last"></div>
+      <div id="modalbody-pictA" class="imgmp col-xs-12 col-sm-12 col-md-12 lg-offset-1 col-lg-4  order-first order-sm-first order-lg-last"></div>
     </div>
     <div class="row">
       <div class="col-12 mt-0">
         <p>
-          <h2 class="item d-inline mt-0 text-size-16px">
-            <span lang="fr"><b>Méthode d'obtention <sup class="fas fa-question-circle iconetab" title="Méthode de culture et d'extraction de la matière première."></sup> :</b></span>
-            <span lang="en"><b>Extraction process <sup class="fas fa-question-circle iconetab" title="Harvesting and extraction methods of the raw material."></sup> :</b></span>
+          <h2 class="item d-inline">
+            <span lang="fr">Méthode d'obtention <sup class="fas fa-question-circle iconetab" title="Méthode de culture et d'extraction de la matière première."></sup> :</span>
+            <span lang="en">Extraction process <sup class="fas fa-question-circle iconetab" title="Harvesting and extraction methods of the raw material."></sup> :</span>
           </h2>
-          <h3 class="textitem d-inline mt-0">
-            <span id="modalbody-methode" class="textitem"></span>
+          <h3 class="textitem d-inline">
+            <span id="modalbody-methode"></span>
           </h3>
         </p>
         <p>
-          <h2 class="item  d-inline text-size-16px">
-            <span lang="fr"><b>Influence et répartition des chémotypes <sup class="fas fa-question-circle iconetab" title="Caractéristiques des autres variétés et/ou espèces de la plante étudiée."></sup> :</b></span>
-            <span lang="en"><b>Chemotypes <sup class="fas fa-question-circle iconetab" title="Other species and varieties characteristics for the studied plant."></sup> :</b></span>
+          <h2 class="item d-inline">
+            <span lang="fr">Influence et répartition des chémotypes <sup class="fas fa-question-circle iconetab" title="Caractéristiques des autres variétés et/ou espèces de la plante étudiée."></sup> :</span>
+            <span lang="en">Chemotypes <sup class="fas fa-question-circle iconetab" title="Other species and varieties characteristics for the studied plant."></sup> :</span>
           </h2>
           <h3 class="textitem d-inline">
-            <span id="modalbody-chemotype" class="textitem"></span>
+            <span id="modalbody-chemotype"></span>
           </h3>
         </p>
         <p>
-          <h2 class="item d-inline text-size-16px">
-            <span lang="fr"><b>Médecine alternative <sup class="fas fa-question-circle iconetab" title="Usages en aromathérapie, phytothérapie ou olfactothérapie."></sup> :</b></span>
-            <span lang="en"><b>Aromatherapy <sup class="fas fa-question-circle iconetab" title="Aromatherapy, phytotherapy and olfactotherapy usage."></sup> :</b></span>
+          <h2 class="item d-inline">
+            <span lang="fr">Médecine alternative <sup class="fas fa-question-circle iconetab" title="Usages en aromathérapie, phytothérapie ou olfactothérapie."></sup> :</span>
+            <span lang="en">Aromatherapy <sup class="fas fa-question-circle iconetab" title="Aromatherapy, phytotherapy and olfactotherapy usage."></sup> :</span>
           </h2>
           <h3 class="textitem d-inline">
-            <span id="modalbody-medecine" class="textitem"></span>
+            <span id="modalbody-medecine"></span>
           </h3>
         </p>
       </div>
