--- a/html/_/index.html
+++ b/html/_/index.html
@@ -404,7 +404,7 @@ crossorigin=""/>
   <div class="row">
   <div class="col-12 panelcontent">
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-9">
+      <div class="col-xs-12 col-sm-12 col-lg-9">
         <p>
           <h2 class="item d-inline">
             <span lang="fr">Nom botanique <sup class="fas fa-question-circle iconetab" title="Nom de la plante ou de l'animal selon le Code International de Nomenclature Botanique."></sup> :</span>
@@ -986,21 +986,21 @@ crossorigin=""/>
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
       <p>
-        <h2 class="item d-inline text-size-16px">
-          <span lang="fr"><b>Utilisation <sup class="fas fa-question-circle iconetab" title="Types de parfums et d'accords auxquels la matière première peux être associée."></sup> :</b></span>
-          <span lang="en"><b>Uses in perfumery <sup class="fas fa-question-circle iconetab" title="Type of accords and perfumes the raw material can be associated with."></sup> :</b></span>
+        <h2 class="item d-inline">
+          <span lang="fr">Utilisation <sup class="fas fa-question-circle iconetab" title="Types de parfums et d'accords auxquels la matière première peux être associée."></sup> :</span>
+          <span lang="en">Uses in perfumery <sup class="fas fa-question-circle iconetab" title="Type of accords and perfumes the raw material can be associated with."></sup> :</span>
         </h2>
         <h3 class="textitem d-inline">
-          <span id="modalbody-utilisation" class="textitem"></span>
+          <span id="modalbody-utilisation"></span>
         </h3>
       </p>
       <p>
-        <h2 class="item d-inline text-size-16px">
-          <span lang="fr"><b>Commentaires et anecdotes <sup class="fas fa-question-circle iconetab" title="Autres commentaires sur la matière première"></sup> :</b></span>
-          <span lang="en"><b>Other comments <sup class="fas fa-question-circle iconetab" title="Additional remarks concerning the raw material."></sup> : </b></span>
+        <h2 class="item d-inline">
+          <span lang="fr">Commentaires et anecdotes <sup class="fas fa-question-circle iconetab" title="Autres commentaires sur la matière première"></sup> :</span>
+          <span lang="en">Other comments <sup class="fas fa-question-circle iconetab" title="Additional remarks concerning the raw material."></sup> : </span>
         </h2>
         <h3 class="textitem d-inline">
-          <span id="modalbody-remarques" class="textitem"></span>
+          <span id="modalbody-remarques"></span>
         </h3>
       </p>
     </div>
