--- a/html/_/index.html
+++ b/html/_/index.html
@@ -434,7 +434,7 @@ crossorigin=""/>
         </p> 
       </div>
       <!-- Colonne Image-->
-      <div id="modalbody-pictA" class="imgmp col-xs-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last"></div>
+      <div id="modalbody-pictA" class="imgmp col-xs-12 col-sm-12 col-md-12 col-lg-4 text-center order-first order-sm-first order-lg-last"></div>
     </div>
     <div class="row">
       <div class="col-12 mt-0">
