--- a/html/_/index.html
+++ b/html/_/index.html
@@ -434,8 +434,8 @@ crossorigin=""/>
         </p> 
       </div>
       <!-- Colonne Image-->
-      <div class="text-center">
-        <div id="modalbody-pictA" class="imgmp col-xs-12 col-sm-12 col-md-12 col-lg-4 text-center order-first order-sm-first order-lg-last"></div>
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 text-center">
+        <div id="modalbody-pictA" class="imgmp col-12 text-center order-first order-sm-first order-lg-last"></div>
       </div>
     </div>
     <div class="row">
