--- a/html/_/index.html
+++ b/html/_/index.html
@@ -434,7 +434,7 @@ crossorigin=""/>
         </p> 
       </div>
       <!-- Colonne Image-->
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3 text-center order-first order-sm-first order-lg-last">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3 text-center order-first order-sm-first order-lg-last" style="text-align: center;">
         <div id="modalbody-pictA" class="imgmp col-12 text-center "></div>
       </div>
     </div>
