--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1037,12 +1037,12 @@ crossorigin=""/>
   <div class="container-fluid  d-inline-block">
     <div class="row">
         <h1 class="col-12 col-md-6  font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
-          <span id="modaltitle1" class="modal-title"></span>
+          <span id="modaltitle" class="modal-title"></span>
         </h1>
-        <h4 class="col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
+        <h4 class=" type col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
           <span id="modalheader-type1" class="modalheader-type2"></span>
         </h4>
-        <div id="modaltitle1-fili" class="col-12  Filiation  text-size-16px text-center"></div>
+        <div id="modaltitle1-fili" class="col-12 Filiation text-size-16px text-center"></div>
     </div>
   </div>
   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
