--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1098,7 +1098,7 @@ crossorigin=""/>
       <div class="container-fluid">
         <div class="row">
           <!--1ère colonne-->
-          <div class="col-12 col-sm-12 col-lg-5 blockdonnees panel-content">
+          <div class="col-12 col-sm-12 col-lg-5 panel-content">
             
             <p>
               <h2 class="item d-inline text-size-16px">
