--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1255,38 +1255,48 @@ crossorigin=""/>
 
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-9 panelcontent">
             <p>
-              <h3 class="item d-inline text-size-16px">
-                <span lang="fr"><b>Découverte <sup class="fas fa-question-circle iconetab"  title="Date, lieu et/ou contexte de la découverte de la matière première."></sup> :</b></span>
-                <span lang="en"><b>Discovery <sup class="fas fa-question-circle iconetab"  title="Date, place and context of the discovery of the raw material."></sup> :</b></span>
-                <span id="modalbody-decouverte1" class="textitem"></span>
+              <h2 class="item d-inline">
+                <span lang="fr">Découverte <sup class="fas fa-question-circle iconetab"  title="Date, lieu et/ou contexte de la découverte de la matière première."></sup> :</span>
+                <span lang="en">Discovery <sup class="fas fa-question-circle iconetab"  title="Date, place and context of the discovery of the raw material."></sup> :</span>
+              </h2>
+                <h3 class="textitem d-inline">
+                <span id="modalbody-decouverte1"></span>
               </h3>
             </p>
             <p>
-              <h3 class="item d-inline text-size-16px">
-                <span lang="fr"><b>Voies de synthèse <sup class="fas fa-question-circle iconetab"  title="Réactions successives permettant d'obtenir la matière première par voie synthétique."></sup> :</b></span>
-                <span lang="en"><b>Synthesis route <sup class="fas fa-question-circle iconetab"  title="Successive reactions leading to the synthesis of the raw material."></sup> :</b></span>
-                <span id="modalbody-synthèse" class="textitem"></span>
+              <h2 class="item d-inline">
+                <span lang="fr">Voies de synthèse <sup class="fas fa-question-circle iconetab"  title="Réactions successives permettant d'obtenir la matière première par voie synthétique."></sup> :</span>
+                <span lang="en">Synthesis route <sup class="fas fa-question-circle iconetab"  title="Successive reactions leading to the synthesis of the raw material."></sup> :</span>
+              </h2>
+              <h3 class="textitem d-inline">
+                <span id="modalbody-synthèse"></span>
               </h3>
             </p>
             <p>
-              <h3 class="item d-inline text-size-16px">
-                <span lang="fr"><b>Précurseurs de synthèse <sup class="fas fa-question-circle iconetab"  title="Matières premières de parfumerie pouvant être synthétisées à partir de cet ingrédient."></sup> :</b></span>
-                <span lang="en"><b>Synthesis precursor <sup class="fas fa-question-circle iconetab"  title="Perfumery raw materials that can be synthetized thanks to this ingredient."></sup> :</b></span>
-                <span id="modalbody-précurseur" class="textitem"></span>
+              <h2 class="item d-inline">
+                <span lang="fr">Précurseurs de synthèse <sup class="fas fa-question-circle iconetab"  title="Matières premières de parfumerie pouvant être synthétisées à partir de cet ingrédient."></sup> :</span>
+                <span lang="en">Synthesis precursor <sup class="fas fa-question-circle iconetab"  title="Perfumery raw materials that can be synthetized thanks to this ingredient."></sup> :</span>
+              </h2>
+              <h3 class="textitem d-inline">
+                <span id="modalbody-précurseur"></span>
               </h3>
             </p>
             <p>
-              <h3 class="item d-inline text-size-16px">
-                <span lang="fr"><b>Isoméries <sup class="fas fa-question-circle iconetab"  title="Molécules ayant la même formule brute que la matière première étudiée. Isomérie de constution : même formule brute (Acétate de Gaiyl et de Cédryl); isomérie de configuration : molécules différentes dans leur représentation dans l'espace (D et L-Limonène); isomérie de position : molécules différentes par la position d'un ou plusieurs de leurs groupements caractéristiques (Verdox et Vertenex)."></sup> :</b></span>
-                <span lang="en"><b>Isomerism <sup class="fas fa-question-circle iconetab"  title="Molecules having the same empirical formula than the studied raw material. Constitutional isomers : same empirical formula (Gaiyl and Cedryl Acetate); Configuration isomers : different molecules according to their space representation (D and L-Limonene); Position isomers : different molecules according to the position of one or more of their characteristic groups (Verdox and Vertenex)."></sup> :</b></span>
-                <span id="modalbody-isomérie" class="textitem"></span>
+              <h2 class="item d-inline">
+                <span lang="fr">Isoméries <sup class="fas fa-question-circle iconetab"  title="Molécules ayant la même formule brute que la matière première étudiée. Isomérie de constution : même formule brute (Acétate de Gaiyl et de Cédryl); isomérie de configuration : molécules différentes dans leur représentation dans l'espace (D et L-Limonène); isomérie de position : molécules différentes par la position d'un ou plusieurs de leurs groupements caractéristiques (Verdox et Vertenex)."></sup> :</span>
+                <span lang="en">Isomerism <sup class="fas fa-question-circle iconetab"  title="Molecules having the same empirical formula than the studied raw material. Constitutional isomers : same empirical formula (Gaiyl and Cedryl Acetate); Configuration isomers : different molecules according to their space representation (D and L-Limonene); Position isomers : different molecules according to the position of one or more of their characteristic groups (Verdox and Vertenex)."></sup> :</span>
+              </h2>
+              <h3 class="textitem d-inline">
+                <span id="modalbody-isomérie"></span>
               </h3>
             </p>
             <p>
-              <h3 class="item d-inline text-size-16px">
-                <span lang="fr"><b>Présence dans la nature <sup class="fas fa-question-circle iconetab"  title="Matières premières naturelles dans lesquels la molécule peut être trouvée."></sup> :</b></span>
-                <span lang="en"><b>Natural availability <sup class="fas fa-question-circle iconetab"  title="Natural raw materials in which the molecule can be found."></sup> :</b></span>
-                <span id="modalbody-présencenat" class="textitem"></span>
+              <h2 class="item d-inline ">
+                <span lang="fr">Présence dans la nature <sup class="fas fa-question-circle iconetab"  title="Matières premières naturelles dans lesquels la molécule peut être trouvée."></sup> :</span>
+                <span lang="en">Natural availability <sup class="fas fa-question-circle iconetab"  title="Natural raw materials in which the molecule can be found."></sup> :</span>
+              </h2>
+              <h3 class="textitem d-inline">
+                <span id="modalbody-présencenat"></span>
               </h3>
             </p>
           </div>
