--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -185,6 +185,23 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h2 id="heading22"><span lang="fr">12 avril 2020</span><span lang="en">12<sup>th</sup> april 2020</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
+          </h2>
+          <p>
+              <a class="interpop"  href="../ingredients/Lovage_Leaf_EO__Livèche_Feuilles_HE.html"><span lang="en">Lovage Leaf EO (CAS N°: 8016-31-7)</span><span lang="fr">Livèche Feuilles HE (CAS N°: 8016-31-7)</span></a>
+              <br><a class="interpop"  href="../ingredients/Cedarwood_Texas_EO__Bois_de_Cèdre_Texas_HE.html"><span lang="en">Cedarwood Texas EO (CAS N°: 68990-83-0)</span><span lang="fr">Bois de Cèdre Texas HE (CAS N°: 68990-83-0)</span></a>
+              <br><a class="interpop"  href="../ingredients/Majantol®__Majantol®.html"><span lang="en">Majantol<sup>®</sup> (CAS N°: 103694-68-4)</span><span lang="fr">Majantol<sup>®</sup> (CAS N°: 103694-68-4)</span></a>
+              <br><a class="interpop"  href="../ingredients/Jasmal®__Jasmal®.html"><span lang="en">Jasmal<sup>®</sup> (CAS N°: 18871-14-2)</span><span lang="fr">Jasmal<sup>®</sup> (CAS N°: 18871-14-2)</span></a>
+              <br><a class="interpop"  href="../ingredients/Osyrol®__Osyrol®.html"><span lang="en">Osyrol<sup>®</sup> (CAS N°: 41890-92-0)</span><span lang="fr">Osyrol<sup>®</sup> (CAS N°: 41890-92-0)</span></a>
+              <br><a class="interpop"  href="../ingredients/Trimofix®__Trimofix®.html"><span lang="en">Trimofix<sup>®</sup> (CAS N°: 28371-99-5)</span><span lang="fr">Trimofix<sup>®</sup> (CAS N°: 28371-99-5)</span></a>
+              <br><a class="interpop"  href="../ingredients/Ambrinol__Ambrinol.html"><span lang="en">Ambrinol (CAS N°: 41199-19-3)</span><span lang="fr">Ambrinol (CAS N°: 41199-19-3)</span></a>
+              <br><a class="interpop"  href="../ingredients/Ozonil®__Ozonil®.html"><span lang="en">Ozonil<sup>®</sup> (CAS N°: 22629-49-8)</span><span lang="fr">Ozonil<sup>®</sup> (CAS N°: 22629-49-8)</span></a>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h2 id="heading22"><span lang="fr">05 avril 2020</span><span lang="en">5<sup>th</sup> april 2020</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 9 nouvelles matières premières</span><span lang="en" class="ajoutMP">9 new ingredients added </span>
           </h2>
