--- a/html/_/support.html
+++ b/html/_/support.html
@@ -199,7 +199,7 @@ crossorigin=""/>
           <ul style="font-size: 0.8em;">
             <li>AMIEL Fanny -<span lang="fr" class="profession"> (Etudiante à l'ESP)</span><span lang="en" class="profession"> (ESP student)</span></li>
             <li>ASTORRI Marc -<span lang="fr" class="profession"> (Ancien Apprenti Parfumeur)</span><span lang="en" class="profession"> (Former Perfumer Apprentice)</span></li>
-            <li class="nouveausupporter">BAKOUCHE Stéphanie -<span lang="fr" class="profession"> (Parfumeur indépendante chez SENSABA)</span><span lang="en" class="profession"> (Perfumer Freelance at SENSABA)</span></li>
+            <li>BAKOUCHE Stéphanie -<span lang="fr" class="profession"> (Parfumeur indépendante chez SENSABA)</span><span lang="en" class="profession"> (Perfumer Freelance at SENSABA)</span></li>
             <li>BELLOT Raphaël -<span lang="fr" class="profession"> (Apprenti Chimie Analytique Fine Fragrance)</span><span lang="en" class="profession"> (Apprentice in Fine Fragrance Analytical Chemistry)</span></li>
             <li>BUCHANAN Jessica -<span lang="fr" class="profession"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en" class="profession"> (Perfumer Freelance at 1000 Flowers)</span></li>
             <li>CERVI Yohan -<span lang="fr" class="profession"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Director of Creation at MAELSTROM Parfumeurs)</span></li>
