--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1327,9 +1327,9 @@ crossorigin=""/>
             <!--Block IFRA entier-->
             <div class="IFRA m-0">
                 <!--Apparition du mot IFRA-->
-                <h2 class="d-inline item text-size-16px">
-                  <b lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b>
-                  <b lang="en">IFRA <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides maximum uses for some raw materials in finished products. The notices given by this association have a great value in the perfume industry. Respecting IFRA standards is a guarantee of quality and security when using the perfume."></sup> :</b>
+                <h2 class="item d-inline">
+                  <span lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</span>
+                  <span lang="en">IFRA <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides maximum uses for some raw materials in finished products. The notices given by this association have a great value in the perfume industry. Respecting IFRA standards is a guarantee of quality and security when using the perfume."></sup> :</span>
                 </h2>
                 <h3 class="textitem d-inline IFRA-show-nothing">
                   <span lang="fr">Ingrédient non réglementé</span>
