--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1614,7 +1614,7 @@ crossorigin=""/>
                           </h3>
                           <br>
                           <!--Cause d'apparition de l'ingrédients concerné-->
-                          <h2 class="item cause d-inline IFRA-infos">
+                          <h2 class="item d-inline cause IFRA-infos">
                             <span lang="fr">Cause de la restriction <sup class="fas fa-question-circle iconetab" title="Tous les ingrédients ne sont pas réglementés pour la même raison, l'IFRA précise donc les propriétés de l'ingrédient responsables de la restriction."></sup> :</span>
                             <span lang="en">Cause of restriction <sup class="fas fa-question-circle iconetab" title="All ingredients are not regulated for the same reason, so IFRA specifies the properties of the ingredient responsible for the restriction."></sup> :</span>
                           </h2>
@@ -1623,31 +1623,29 @@ crossorigin=""/>
                           </h3>
                           <br>
                           <!--Amendement d'apparition de l'ingrédients concerné-->
-                          <h3 class="amendment49 d-inline text-size-14px IFRA-infos">
-                            <span>
-                              <b lang="fr">Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
-                              <b lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
-                            </span>
-                            <span class="modalbody-amendment-49 textitem"></span>
+                          <h2 class="item d-inline amendment49 IFRA-infos">
+                            <span lang="fr">Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</span>
+                            <span lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</span>
+                          </h2>
+                          <h3 class="textitem d-inline">
+                            <span class="modalbody-amendment-49"></span>
                           </h3>
                           <br>
                           <!--Commentaires-->
-                          <h3 class="commentaires49 d-inline text-size-14px IFRA-infos">
-                            <span>
-                              <b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients."></sup> :</b>
-                              <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions."></sup> :</b>
-                            </span>
-                            <span class="modalbody-commentifra-49 textitem"></span>  
+                          <h2 class="item d-inline commentaires49 IFRA-infos">
+                            <span lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients."></sup> :</span>
+                            <span lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions."></sup> :</span>
+                          </h2>
+                          <h3 class="textitem d-inline">
+                            <span class="modalbody-commentifra-49"></span>  
                           </h3>
                           
                           <div class="blocktable49 mt-3">
                             <!--Titre des tableaux : "Dosage limite recommandé"-->
-                            <h3 class="d-inline text-size-14px">
-                              <span>
-                                <b lang="fr">Dosage limite recommandé <sup class="fas fa-question-circle iconetab" title="L'IFRA recommande dans ses standards un dosage maximum pour chaque produit réglementé et pour chaque catégorie de produit fini. Il faut ainsi voir ces pourcentages comme la plus haute concentration recommandée en ingrédient réglementé dans le produit fini."></sup> :</b>
-                                <b lang="en">Quantitative limit on the use <sup class="fas fa-question-circle iconetab" title="IFRA recommends in its standards a maximum dosage for each regulated product and for each category of finished product. These percentages should therefore be seen as the highest recommended concentration of the regulated ingredient in the finished product."></sup> :</b>
-                              </span>  
-                            </h3>
+                            <h2 class="item d-inline">
+                              <span lang="fr">Dosage limite recommandé <sup class="fas fa-question-circle iconetab" title="L'IFRA recommande dans ses standards un dosage maximum pour chaque produit réglementé et pour chaque catégorie de produit fini. Il faut ainsi voir ces pourcentages comme la plus haute concentration recommandée en ingrédient réglementé dans le produit fini."></sup> :</span>
+                              <span lang="en">Quantitative limit on the use <sup class="fas fa-question-circle iconetab" title="IFRA recommends in its standards a maximum dosage for each regulated product and for each category of finished product. These percentages should therefore be seen as the highest recommended concentration of the regulated ingredient in the finished product."></sup> :</span>
+                            </h2>
                             <div class="table-responsive text-center m-0">
                                   <table class="table149 main-49th-IFRA-table IFRA-table">
                                     <!-- EN-TETE DU TABLEAU-->
@@ -1755,9 +1753,10 @@ crossorigin=""/>
                           </div>
 
                           <div class="listy-49th-IFRA-table-with-botanicals IFRA-table mt-3">
-                            <h3 class="annexeI49B d-inline IFRA-infos textitem2">
-                              <span lang="fr"><b class="item">Annexe I :</b> Certains ingrédients naturels contiennent des composants eux-mêmes réglementés qu'il convient de prendre en compte dans les doses limites recommandées. Dans le cas où vous n'avez pas la possibilité d'avoir des chromatographies précises pour vos qualités d'ingrédients naturels, l'IFRA fourni des tables avec des concentrations à prendre par défaut. Les voici : </span>
-                              <span lang="en"><b>Annexe I :</b> Some regulated synthetic ingredients are found in nature and in certain proportions in natural ingredients. This presence in nature has to be taken into account when calculating limits of use recommended by the IFRA. In case you do not know these concentrations, you can use the ones estimated by the IFRA. Here They are :</span>
+                            <h2 class="item d-inline annexeI49B IFRA-infos">Annexe I :</h2>
+                            <h3 class="textitem d-inline">
+                              <span lang="fr">Certains ingrédients naturels contiennent des composants eux-mêmes réglementés qu'il convient de prendre en compte dans les doses limites recommandées. Dans le cas où vous n'avez pas la possibilité d'avoir des chromatographies précises pour vos qualités d'ingrédients naturels, l'IFRA fourni des tables avec des concentrations à prendre par défaut. Les voici : </span>
+                              <span lang="en">Some regulated synthetic ingredients are found in nature and in certain proportions in natural ingredients. This presence in nature has to be taken into account when calculating limits of use recommended by the IFRA. In case you do not know these concentrations, you can use the ones estimated by the IFRA. Here They are :</span>
                             </h3>
                             <br>
                             <table class="tableannexeI49th mt-0">
@@ -1797,7 +1796,7 @@ crossorigin=""/>
                 </div><!--Fermeture du 49th amendement-->
             </div><!--Fermeture du tab-content-->
             <!--PARAGRAPHE DES LIENS INTERNE/EXTERNE-->
-            <div class="lienarticlereglementation mt-3 mb-1">
+            <p class="lienarticlereglementation mt-3 mb-1">
                 <!--Lien externe vers site IFRA-->
                 <span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/safe-use/understanding-the-ifra-standards" target="_blank">https://ifrafragrance.org/safe-use/understanding-the-ifra-standards</a></span>
                 <span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/safe-use/understanding-the-ifra-standards" target="_blank">https://ifrafragrance.org/safe-use/understanding-the-ifra-standards</a></span>
@@ -1805,7 +1804,7 @@ crossorigin=""/>
                 <!--Lien interne sur l'IFRA-->
                 <span lang="fr">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, consultez notre <a href="../_/IFRA.html" target="_BLANK">article sur l'IFRA</a></span>
                 <span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a href="../_/IFRA.html" target="_BLANK">article about l'IFRA</a></span>
-            </div>
+            </p>
           </div><!--Fermeture du block IFRA-->
             <!--Block Pictogrammes-->
             <!--<div class="blockpicto">
@@ -1817,9 +1816,9 @@ crossorigin=""/>
                     </h1>
                     <span id="TO DEFINE" class="textitem"></span>
             </div>-->       
-        </div><!--Là on ferme col-12-->   
-        </div><!--Ici on ferme row-->
-      </div><!--Ici on ferme container fluid-->
+    </div><!--Là on ferme col-12-->   
+    </div><!--Ici on ferme row-->
+    </div><!--Ici on ferme container fluid-->
     </div><!--Fermeture de l'onglet reglementation-->
 
     <!--onglet Commentaires-->
