--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1099,7 +1099,6 @@ crossorigin=""/>
         <div class="row">
           <!--1ère colonne-->
           <div class="col-12 col-sm-12 col-lg-6 panel-content">
-            
             <p>
               <h2 class="item d-inline">
                 <span lang="fr">N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</span>
@@ -1137,6 +1136,7 @@ crossorigin=""/>
                 <span lang="fr">N° FLAVIS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première dans le EU FLAVouring Information System."></sup> :</span>
                 <span lang="en">FLAVIS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the EU FLAVouring Information System."></sup> :</span>
               </h2>
+              <h3 class="textitem d-inline">
                 <span id="modalbody-flavis1"></span>
               </h3>
             </p> 
@@ -1794,7 +1794,7 @@ crossorigin=""/>
                     </div><!--Ici on ferme row-->
                   </div><!--Ici on ferme container fluid-->        
                 </div><!--Fermeture du 49th amendement-->
-            </div><!--Fermeture du tab-content-->
+              </div><!--Fermeture du tab-content-->
             <!--PARAGRAPHE DES LIENS INTERNE/EXTERNE-->
             <p class="lienarticlereglementation mt-3 mb-1">
                 <!--Lien externe vers site IFRA-->
@@ -1828,8 +1828,8 @@ crossorigin=""/>
           <div class="col-lg-12">
             <p>
               <h2 class="item d-inline">
-                <span lang="fr"><b>Utilisation <sup class="fas fa-question-circle iconetab" title="Types de parfums et d'accords auxquels la matière première peux être associée."></sup> :</b></span>
-                <span lang="en"><b>Uses in perfumery <sup class="fas fa-question-circle iconetab" title="Type of accords and perfumes the raw material can be associated with."></sup> :</b></span>
+                <span lang="fr">Utilisation <sup class="fas fa-question-circle iconetab" title="Types de parfums et d'accords auxquels la matière première peux être associée."></sup> :</span>
+                <span lang="en">Uses in perfumery <sup class="fas fa-question-circle iconetab" title="Type of accords and perfumes the raw material can be associated with."></sup> :</span>
               </h2>
               <h3 class="textitem d-inline">
                 <span id="modalbody-utilisation1"></span>
@@ -1837,8 +1837,8 @@ crossorigin=""/>
             </p>
             <p>
               <h2 class="item d-inline text-size-16px">
-                <span lang="fr"><b>Commentaires et anecdotes <sup class="fas fa-question-circle iconetab" title="Autres commentaires sur la matière première"></sup> :</b></span>
-                <span lang="en"><b>Other comments <sup class="fas fa-question-circle iconetab" title="Additional remarks concerning the raw material."></sup> : </b></span>
+                <span lang="fr">Commentaires et anecdotes <sup class="fas fa-question-circle iconetab" title="Autres commentaires sur la matière première"></sup> :</span>
+                <span lang="en">Other comments <sup class="fas fa-question-circle iconetab" title="Additional remarks concerning the raw material."></sup> : </span>
               </h2>
               <h3 class="textitem d-inline">
                 <span id="modalbody-remarques1"></span>
