--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1054,12 +1054,12 @@ crossorigin=""/>
   <div class="panel-heading  m-0 p-0">
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <!--mobile version-->
-      <button class="navbar-toggler text-center mx-auto" type="button" data-toggle="collapse" data-target="#navbarForSynthetiques" aria-controls="navbarForSynthetiques" aria-expanded="false" aria-label="Toggle navigation" style="font-size: 1.2em;">
+      <button class="navbar-toggler justify-content-center text-center mx-auto" type="button" data-toggle="collapse" data-target="#navbarForSynthetiques" aria-controls="navbarForSynthetiques" aria-expanded="false" aria-label="Toggle navigation" style="font-size: 1.2em;">
         <span lang="fr">Veuillez sélectionner une catégorie..</span>
         <span lang="en">Please select a category..</span>
       </button>
     <!--Desktop version-->
-      <div class="collapse navbar-collapse text-size-16px m-0 p-0" id="navbarForSynthetiques">
+      <div class="collapse navbar-collapse text-size-16px m-0 p-0" id="navbarForSynthetiques" style="color=">
         <ul id="ongletssynth" class="navbar-nav nav nav-tabs mx-auto" role="tablist">
           <li class="nav-item">
             <a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="true" class="nav-link active" id="pills-tab12">
