--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1052,7 +1052,7 @@ crossorigin=""/>
   
     <!-- définissions des onglets -->
   <div class="panel-heading  m-0 p-0">
-    <nav class="navbar navbar-expand-lg bg-transparent">
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <!--mobile version-->
       <button class="navbar-toggler text-center mx-auto" type="button" data-toggle="collapse" data-target="#navbarForSynthetiques" aria-controls="navbarForSynthetiques" aria-expanded="false" aria-label="Toggle navigation" style="font-size: 1.2em;">
         <span lang="fr">Veuillez sélectionner une catégorie..</span>
