--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1054,7 +1054,7 @@ crossorigin=""/>
   <div class="panel-heading  m-0 p-0">
     <nav class="navbar navbar-expand-lg  bg-transparent">
       <!--mobile version-->
-      <button class="navbar-toggler text-center mx-auto" type="button" data-toggle="collapse" data-target="#navbarForSynthetiques" aria-controls="navbarForSynthetiques" aria-expanded="false" aria-label="Toggle navigation" style="font-size: 1.2em;">
+      <button class="navbar-toggler text-center mx-auto" type="button" data-toggle="collapse" data-target="#navbarForSynthetiques" aria-controls="navbarForSynthetiques" aria-expanded="false" aria-label="Toggle navigation" style="font-size: 1.2em; color: #D64E26;">
         <span lang="fr">Veuillez sélectionner une catégorie..</span>
         <span lang="en">Please select a category..</span>
       </button>
