--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1338,8 +1338,13 @@ crossorigin=""/>
                 <br>
                 <!--Onglets pour les amendements IFRA-->
                 <div class="panel-heading m-0 p-0">
-                  <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-                    <div class="collapse navbar-collapse text-size-16px m-0 p-0">
+                  <nav class="navbar navbar-expand-lg bg-transparent">
+                    <button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target="#amendmentIFRA" aria-controls="amendmentIFRA" aria-expanded="false" aria-label="Toggle navigation" style="font-size: 1.2em; border: 2px solid #dbdbdb;border-radius: 14px 14px 14px 14px;">
+                      <span lang="fr">Veuillez sélectionner une catégorie..</span>
+                      <span lang="en">Please select a category..</span>
+                    </button>
+
+                    <div class="collapse navbar-collapse text-size-16px m-0 p-0" id="amendmentIFRA">
                       <ul class="navbar-nav nav nav-tabs mx-auto" role="tablist" style="align-items: center;">
                         <li class="nav-item col-6">
                           <a class="nav-link active" id="pills-tab49s" href="#tab49sinfo" data-toggle="pill" aria-controls="tab49sinfo" aria-selected="false"  >
