--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1340,8 +1340,8 @@ crossorigin=""/>
                 <div class="panel-heading m-0 p-0">
                   <nav class="navbar navbar-expand-lg bg-transparent">
                     <button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target="#amendmentIFRA" aria-controls="amendmentIFRA" aria-expanded="false" aria-label="Toggle navigation" style="font-size: 1.2em; border: 2px solid #dbdbdb;border-radius: 14px 14px 14px 14px;">
-                      <span lang="fr">Veuillez sélectionner une catégorie..</span>
-                      <span lang="en">Please select a category..</span>
+                      <span lang="fr">Choisir amendement..</span>
+                      <span lang="en">Select amendment..</span>
                     </button>
 
                     <div class="collapse navbar-collapse text-size-16px m-0 p-0" id="amendmentIFRA">
