with splide's carousel

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -17,8 +17,8 @@
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-<!-- tiny slider carousel -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/tiny-slider.css">
+<!-- splide carousel -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.2.3/dist/css/splide.min.css">
 
 <!-- Fichier Style CSS -->
 <link href="../css/style.css" rel="stylesheet" />
@@ -1783,6 +1783,7 @@ crossorigin=""/>
 </div> <!-- fin synthetique -->
 
 
+</main>
 
 
 
@@ -1801,8 +1802,8 @@ crossorigin=""/>
 integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
 crossorigin=""></script>
 
-<!-- tiny slider carousel -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+<!-- splide carousel -->
+<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.2.3/dist/js/splide.min.js"></script>
 
 <script src="../js/main.js"></script>
 
@@ -1816,6 +1817,5 @@ if (Cookies.get('RGPD_no_cookie') == -1) {
   gtag('config', 'UA-140166656-1');
 };
 </script>
-</main>
 </body>
 </html>
