--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -547,7 +547,7 @@ crossorigin=""/>
         <td>106-22-9</td>
         <td>
           <h4>
-          <a class="interpop" href="../ingredients/Treemoss_Absolute__Mousse_d'arbre_Absolue.html" target="_BLANK">
+          <a class="interpop" href="../ingredients/Treemoss_Absolute__Mousse_d_arbre_Absolue.html" target="_BLANK">
             <span lang="fr">Extraits de Mousse d’Arbre </span>
             <span lang="en">Treemoss Extract</span>
           </a>
