--- a/html/_/index.html
+++ b/html/_/index.html
@@ -650,7 +650,7 @@ crossorigin=""/>
                                 </tr>
                               </table>
                             
-                              <table class="table2 skin-IFRA-table IFRA-table mb-3">
+                              <table class="table2 skin-IFRA-table IFRA-table">
                                 <!-- EN-TETE DU TABLEAU-->
                                 <tr>
                                   <th colspan="2"><span lang="fr">En contact avec la peau</span><span lang="en">Skin contact products </span></th>
@@ -1516,7 +1516,7 @@ crossorigin=""/>
                                         </tr>
                                       </table>
                                     
-                                      <table class="table2 skin-IFRA-table IFRA-table mb-3">
+                                      <table class="table2 skin-IFRA-table IFRA-table">
                                         <!-- EN-TETE DU TABLEAU-->
                                         <tr>
                                           <th colspan="2"><span lang="fr">En contact avec la peau</span><span lang="en">Skin contact products </span></th>
